# Quantization

./: .env.example  .gitignore  MODULE_2_PROCESS.md  README.md  app.py  pyproject.toml  requirements.txt
scripts/: verify_frontend_backend.py
src/: __init__.py  config.py  logger.py  models.py
src/api/: __init__.py  main.py
tests/: test_api.py  test_config.py  test_logger.py  test_models.py
